crates/carta/tests/snapshots/golden_writer__ipynb__image-dimensions__image-inline-dims.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{
 "cells": [
  {
   "cell_type": "markdown",
   "metadata": {},
   "source": [
    "text <img src=\"pic.png\" width=\"200\" alt=\"alt\" /> more"
   ],
   "id": "511c173d-be09-4cc7-9d03-ef79d45853fe"
  }
 ],
 "nbformat": 4,
 "nbformat_minor": 5,
 "metadata": {}
}
